--- a/cpp11/CMakeLists.txt
+++ b/cpp11/CMakeLists.txt
@@ -1,12 +1,15 @@
 set_property(DIRECTORY PROPERTY LABELS 11)
 
-set(names current_exception iota getenv nullptr)
+set(CMAKE_CXX_STANDARD 11)
+
+set(f11 current_exception iota getenv nullptr)
 if(WIN32)
-  list(APPEND names GetLastError)
+  list(APPEND f11 GetLastError)
 endif()
 
-foreach(t IN LISTS names)
+foreach(t IN LISTS f11)
   add_executable(${t} ${t}.cpp)
+
   add_test(NAME ${t} COMMAND ${t})
 endforeach()
 
@@ -17,3 +20,9 @@ endif()
 if(TEST GetLastError)
   set_property(TEST GetLastError PROPERTY WILL_FAIL true)
 endif()
+
+# --- count features enabled
+get_property(t DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY BUILDSYSTEM_TARGETS)
+list(LENGTH f11 Nf)
+list(LENGTH t Ne)
+message(STATUS "C++11 features: ${Ne} / ${Nf}")
