clang: c++26 flags and libs

--- a/cpp23/CMakeLists.txt
+++ b/cpp23/CMakeLists.txt
@@ -69,6 +69,16 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   endif()
 endif()
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  if(TARGET stacktrace)
+    target_compile_options(stacktrace PRIVATE -fsized-deallocation)
+    target_link_libraries(stacktrace PRIVATE stdc++exp)
+  endif()
+  if(TARGET print AND WIN32)
+    target_link_libraries(print PRIVATE stdc++exp)
+  endif()
+endif()
+
 if(TEST unreachable)
   set_property(TEST unreachable PROPERTY WILL_FAIL TRUE)
 endif()
