--- a/cpp20/CMakeLists.txt
+++ b/cpp20/CMakeLists.txt
@@ -11,16 +11,8 @@ endif()
 
 check_cxx_symbol_exists(__cpp_structured_bindings "" have_structured_bindings)
 
-check_include_file_cxx(syncstream have_syncstream)
-check_cxx_symbol_exists(__cpp_lib_jthread "version" have_jthread)
-check_cxx_symbol_exists(__cpp_lib_ssize "version" have_ssize)
-# example requires jthread, syncstream, ssize
-if(have_jthread AND have_syncstream AND have_ssize)
-  check_cxx_symbol_exists(__cpp_lib_barrier "version" have_barrier)
-endif()
-
 foreach(t IN ITEMS format int_pow2
-  hardware_interference_size latch math_constants
+  hardware_interference_size jthread ssize latch math_constants
   semaphore source_location smart_ptr_for_overwrite)
   check_cxx_symbol_exists(__cpp_lib_${t} "version" have_${t})
 endforeach()
@@ -29,6 +21,14 @@ if(have_int_pow2)
   file(READ bit_width.cpp _src)
   check_source_compiles(CXX "${_src}" have_bit_width)
 endif()
+
+check_include_file_cxx(syncstream have_syncstream)
+# example requires jthread, syncstream, ssize
+if(have_jthread AND have_syncstream AND have_ssize)
+  check_cxx_symbol_exists(__cpp_lib_barrier "version" have_barrier)
+endif()
+
+set(have_stop_callback ${have_jthread})
 
 if(has_cpp_attribute)
 
@@ -68,10 +68,10 @@ set(f20
 semaphore barrier
 bit_width execution_policy
 hardware_interference_size
-format latch
+format jthread latch
 likely math_constants ranges_find
 source_location smart_ptr_for_overwrite
-structured_bindings
+stop_callback structured_bindings
 )
 
 foreach(t IN LISTS f20)
