--- a/cpp23/CMakeLists.txt
+++ b/cpp23/CMakeLists.txt
@@ -66,6 +66,10 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     if(TARGET print AND WIN32)
       target_link_libraries(print PRIVATE stdc++exp)
     endif()
+  else()
+    if(TARGET stacktrace)
+      target_link_libraries(stacktrace PRIVATE stdc++_libbacktrace)
+    endif()
   endif()
 endif()
 
