--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,10 +24,10 @@ jobs:
 
     strategy:
       matrix:
-        v: [12, 13, 14]
+        cxx: [g++-12, g++-13, g++-14, clang++-18]
 
     env:
-      CXX: g++-${{ matrix.v }}
+      CXX: ${{ matrix.cxx }}
 
     steps:
     - uses: actions/checkout@v4
@@ -46,31 +46,10 @@ jobs:
 
     strategy:
       matrix:
-        v: [9, 10, 11]
+        cxx: [g++-9, g++-10, g++-11]
 
     env:
-      CXX: g++-${{ matrix.v }}
-
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Install Ninja
-      run: sudo apt-get install ninja-build
-
-    - run: cmake --workflow --preset debug
-
-    - run: cmake --workflow --preset release
-
-  clang:
-    runs-on: ubuntu-24.04
-    timeout-minutes: 5
-
-    strategy:
-      matrix:
-        v: [18]
-
-    env:
-      CXX: clang++-${{ matrix.v }}
+      CXX: ${{ matrix.cxx }}
 
     steps:
     - uses: actions/checkout@v4
