ci:macos: disable GCC for now as generally broken on GHA

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -72,7 +72,8 @@ jobs:
 
     strategy:
       matrix:
-        cxx: [g++-13, clang++]
+        cxx: [clang++]
+    # g++-13 GHA runner generally broken for now
 
     steps:
     - name: Install Ninja
