--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -106,6 +106,8 @@ jobs:
         update: true
         install: >-
           mingw-w64-x86_64-ninja
+          mingw-w64-x86_64-gcc
+# need GCC install to get latest G++
 
     - name: Put MSYS2_MinGW64 on PATH
       run: echo "${{ runner.temp }}/msys64/mingw64/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
