--- a/cpp26/CMakeLists.txt
+++ b/cpp26/CMakeLists.txt
@@ -15,9 +15,7 @@ file(READ adl_projected.cpp src)
 check_source_compiles(CXX "${src}" have_adl_projected)
 
 
-set(f26 adl_projected format_pointer linalg saturation_arithmetic)
-
-foreach(t IN LISTS f26)
+foreach(t IN LISTS cpp26features)
   if(NOT have_${t})
     continue()
   endif()
@@ -30,13 +28,4 @@ endforeach()
 if(TARGET adl_projected AND
      APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   target_compile_options(adl_projected PRIVATE -Wno-unused-variable)
-endif()
-
-# --- count features enabled
-get_property(t DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY BUILDSYSTEM_TARGETS)
-list(LENGTH f26 Nf)
-list(LENGTH t Ne)
-message(STATUS "C++26 features: ${Ne} / ${Nf}")
-if(Ne LESS Nf)
-  message(STATUS "enabled targets: ${t}")
 endif()
